# filecoin-ffi

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  PR_tipset_reservations_ffi.md  README.md  RELEASE.md  agg_test.go  bindings.go  bindings_test.go  bls.go  bls_darwin_arm64.go  bls_test.go  build.rs  build.sh  cbindgen.toml  distributed.go  distributed_darwin_arm64.go  filcrypto-v1.h  filcrypto-v1.pc  filcrypto-v1.yml  filcrypto-v2.h  filcrypto-v2.pc  filcrypto-v2.yml  filcrypto.yml  filecoin.yml  filecoin_proofs.pc.template  filecoin_proofs_ffi.pc.template  fs.go  fvm.go  fvm_darwin_arm64.go  fvm_stub.go  fvm_test.go  go.mod  go.sum  go.work  install-filcrypto  install-filecoin  (+29 more)
.circleci/: config.yml
.github/actions/configure-environment/: action.yml
.github/actions/upload-release-assets/: action.yml
.github/workflows/: ci.yml  glibc.yml  release-check.yml  release.yml  releaser.yml  upload-release-assets.yml
builder/arm64/: Dockerfile  README.md  run_arm_build_docker.sh
cgo/: blockstore.go  bls.go  const.go  errors.go  extern.go  fvm.go  fvm_reservations.go  fvm_reservations_test.go  generated.go  generated_test.go  helpers.go  helpers_test.go  interface.go  libs.go  proofs.go  registry.go  types.go  types_fvm.go  util.go
cgoleakdetect/: runner.go  simulator.go
fvm/: fvm.go
fvm/cgo/: blockstore.go  extern.go  interface.go  registry.go
generated_v1/: cgo_helpers.go  cgo_helpers.h  const.go  generated_v1.go  types.go
generated_v2/: cgo_helpers.go  cgo_helpers.h  const.go  generated_v2.go  types.go
headerstubs/: fixup.h  stdbool.h  stddef.h  stdint.h
include/: ffi-common.h  filcrypto-v1.h  filcrypto-v2.h
paramfetch/: paramfetch.go
prebuilt/darwin-arm64/: bls.go  distributed.go  fvm.go  go.mod  go.sum  proofs.go  sector_update.go  workflows.go
rust/: Cargo.toml  build.rs  cbindgen.toml  filecoin.pc.template  rust-toolchain  rust-toolchain.toml  rustc-target-features-optimized.json
rust/api-v1/: Cargo.toml  cbindgen.toml
rust/api-v1/src/proofs/: api.rs  helpers.rs  mod.rs  types.rs
rust/api-v2/: Cargo.toml  cbindgen.toml
rust/api-v2/src/: lib.rs
rust/api-v2/src/bls/: api.rs  types.rs
rust/api-v2/src/proofs/: api.rs  helpers.rs  types.rs
rust/api-v2/src/util/: api.rs  types.rs
rust/benches/: agg1.json  aggregation.rs
rust/ffi-common/: Cargo.toml  cbindgen.toml
rust/ffi-common/src/: lib.rs  types.rs
rust/ffi-common/src/bls/: api.rs  types.rs
rust/scripts/: build-release.sh  check-release.sh  package-release.sh  publish-release.sh
rust/src/: api.rs  lib.rs
rust/src/bls/: api.rs  mod.rs  types.rs
rust/src/fvm/: blockstore.rs  cgo.rs  engine.rs  externs.rs  machine.rs  mod.rs  reservations.rs  types.rs
rust/src/fvm/blockstore/: cgo.rs  fake.rs  mod.rs  overlay.rs
rust/src/fvm/cgo/: cgo.rs  error.rs  externs.rs  mock.rs  mod.rs
rust/src/proofs/: api.rs  helpers.rs  mod.rs  types.rs
rust/src/util/: api.rs  types.rs
scripts/: build-release.sh  package-release.sh  retry.sh
sealed_sector_health/: health.go
sealing_state/: state.go
src/: api.rs  helpers.rs  lib.rs  responses.rs  singletons.rs  types.rs
types/: types.go
