[package]
name = "filecoin-proofs-ffi"
description = "FFI Interface to filecoin-proofs"
version = "0.7.2"
authors = ["laser <l@s3r.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-fil-proofs-ffi"
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
filecoin-proofs = "0.6.4"
storage-proofs = "0.6.2"
ffi-toolkit = "0.3.0"
failure = "0.1.5"
drop_struct_macro_derive = "0.3.0"
libc = "0.2.58"
log = "0.4.7"
pretty_env_logger = "0.3.0"
once_cell = "0.2.4"

[build-dependencies]
cbindgen = "0.9"
