[package]
name = "filcrypto"
description = "FFI Interface to Filecoin Proofs"
version = "0.7.5"
authors = [
  "nemo <nemo@protocol.ai>",
  "dignifiedquire <me@dignifiedquire.com>",
  "laser <l@s3r.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/filecoin-ffi"
readme = "README.md"
edition = "2021"
resolver = "2"
publish = false

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bls-signatures = { version = "0.15.0", default-features = false, features = [
  "blst",
] }
blstrs = "0.7"
filepath = "0.1.3"
group = "0.13"
libc = "0.2.171"
log = "0.4.27"
fil_logger = "0.1.7"
rand = "0.8"
rand_chacha = "0.3.1"
rayon = "1.10.0"
anyhow = "1.0.97"
serde_json = "1.0.140"
rust-gpu-tools = { version = "0.7", optional = true, default-features = false }
fvm4 = { package = "fvm", version = "~4.7.4", default-features = false, features = ["verify-signature", "nv28-dev"], optional = true  }
fvm4_shared = { package = "fvm_shared", version = "~4.7.4", optional = true  }
fvm3 = { package = "fvm", version = "~3.13.0", default-features = false, optional = true  }
fvm3_shared = { package = "fvm_shared", version = "~3.13.0", optional = true  }
fvm2 = { package = "fvm", version = "~2.11.0", default-features = false, optional = true  }
fvm2_shared = { package = "fvm_shared", version = "~2.11.0", optional = true  }
fvm_ipld_encoding = { version = "0.5.3", optional = true  }
fvm_ipld_blockstore = { version = "0.3.1", optional = true }
num-traits = "0.2.19"
cid = { version = "0.11.1", features = ["serde"], default-features = false }
lazy_static = "1.5.0"
serde = "1.0.219"
safer-ffi = { version = "0.1.13", features = ["proc_macros"] }
filecoin-proofs-api = { version = "19.0", default-features = false }
yastl = "0.1.2"

[dev-dependencies]
memmap2 = "0.9"
tempfile = "3.19.1"

[features]
default = ["cuda", "multicore-sdr", "fvm"]
fvm = [
  "fvm2",
  "fvm3",
  "fvm4",
  "fvm2_shared",
  "fvm3_shared",
  "fvm4_shared",
  "fvm_ipld_encoding",
  "fvm_ipld_blockstore",
]
curio = []
blst-portable = ["bls-signatures/blst-portable", "blstrs/portable"]
cuda = [
  "filecoin-proofs-api/cuda",
  "rust-gpu-tools/cuda",
  "fvm2/cuda",
  "fvm3/cuda",
  "fvm4/cuda",
]
cuda-supraseal = [
  "filecoin-proofs-api/cuda-supraseal",
  "rust-gpu-tools/cuda",
  "fvm3/cuda-supraseal",
  "fvm4/cuda-supraseal",
]
opencl = [
  "filecoin-proofs-api/opencl",
  "rust-gpu-tools/opencl",
  "fvm2/opencl",
  "fvm3/opencl",
  "fvm4/opencl",
]
multicore-sdr = ["filecoin-proofs-api/multicore-sdr"]
c-headers = ["safer-ffi/headers"]
# This feature enables a fixed number of discarded rows for TreeR. The `FIL_PROOFS_ROWS_TO_DISCARD`
# setting is ignored, no `TemporaryAux` file will be written.
fixed-rows-to-discard = ["filecoin-proofs-api/fixed-rows-to-discard"]

[patch.crates-io]
fvm = { path = "../../ref-fvm/fvm" }
fvm_shared = { path = "../../ref-fvm/shared" }
fvm_ipld_blockstore = { path = "../../ref-fvm/ipld/blockstore" }
fvm_ipld_encoding = { path = "../../ref-fvm/ipld/encoding" }
fvm_ipld_amt = { path = "../../ref-fvm/ipld/amt" }
fvm_ipld_hamt = { path = "../../ref-fvm/ipld/hamt" }
